--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "---\r #### _Three Stage Course Material Project - Restaurant Reviews_",
   "main": "Gruntfile.js",
-  "dependencies": {},
+  "dependencies": {
+    "idb": "^2.1.3"
+  },
   "devDependencies": {
     "grunt": "^1.0.3",
     "grunt-contrib-jshint": "~0.10.0",
